
--Improved appearance of wired wooden walls (no internal, dead-end plugs).

--Fixed visual glitches in pits when they cross northern view edge.

--Fixed tool tip for mobile over empty floor (no longer describes floor).

--Made all cross-wiring less visually noisy (all wiring fat, no skinny wire
  leads).

--Free blueprints for all houses are now available.




Version 5_serverFixes   2013-May-1

--Added extra logging to server to track down name collision and house deletion
  issues.

--Extra server logging for all denied transactions.

--Fixed main server install to properly use InnoDB table engine to fix 
  concurrency issues (my web server had InnoDB disabled before).

--Fixed order of row locks in server to avoid deadlock when two players are
  robbing each other.

--Improved speed of InnoDB table access by using indexed columns in WHERE
  clauses for high-volume queries (this also prevents entire table from being
  locked).

--Web admin view support for search on player name history.

--Paging display for log entries, and stack traces in log for fatal errors.

--Fixed MiB and GiB formatting in database size report.

--Fixed server bug that caused start of self-test to fail after house checkin
  failed once for whatever reason (thanks Tom Loughlin).

--Made start/end_self_test more lenient on server (not sending FAILED in cases
  that are likely caused by timeouts and client retries).

--Made other calls on server more tolerant of client retries.

--Fixed server so that money gained from selling tools can be used to buy
  paintings without checking in the house first (thanks Samuel Walz).

--Improved server flush routine to release locks throughout (so that other
  client requests are not blocked as much during a flush).

--Added support for calling server flush from a cron job instead of
  front-loading it onto client requests.

--Fixed bug in wife money tracking after security tape restart.

--Fixed server-side blocking of tool use in self-test move list.
